# HFT_crypto

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  docker-compose.yml  start.sh  start_safe.sh  stop_safe.sh
app/: coinbase_level2_recorder.cpp  main.cpp
cmake/: Dependencies.cmake
config/: config.json
include/hfmm/core/: order_book.hpp  ring_buffer.hpp  types.hpp
include/hfmm/engine/: engine.hpp
include/hfmm/execution/: binance_rest.hpp  order_manager.hpp
include/hfmm/feed/: binance_feed.hpp  coinbase_feed.hpp  market_data_feed.hpp
include/hfmm/monitoring/: market_event_exporter.hpp
include/hfmm/strategy/: avellaneda_stoikov.hpp
python/: binance_us_streaming.ipynb  coinbase_level2_stream.ipynb  toy_signal_discussion_summary.md  toy_signal_watcher.py  toy_signal_watcher_event.py
services/dashboard-react/: Dockerfile  README.md  index.html  package-lock.json  package.json
services/dashboard-react/src/: App.jsx  styles.css
services/ingest-fastapi/: Dockerfile  README.md  postgres_zerotier_connection_notes.md  requirements.txt
services/ingest-fastapi/app/: db.py  main.py  models.py  settings.py  state.py  udp_ingest.py
services/ingest-fastapi/sql/: 001_init_market_events.sql
src/core/: order_book.cpp
src/engine/: engine.cpp
src/execution/: binance_rest.cpp  order_manager.cpp
src/feed/: binance_feed.cpp  coinbase_feed.cpp  market_data_feed.cpp
src/monitoring/: market_event_exporter.cpp
src/strategy/: avellaneda_stoikov.cpp
tests/: CMakeLists.txt  test_avellaneda_stoikov.cpp  test_order_book.cpp  test_ring_buffer.cpp
